[package]
name = "rand_seeder"
version = "0.5.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["Tunahan Coşgun <info@tunahancosgun.dev>", "Duygu Durmuş <duygudurmus12@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tunacosgun/rand_seeder"
documentation = "https://docs.rs/rand_seeder"
homepage = "https://github.com/tunacosgun/rand_seeder"
description = """
A universal random number seeder based on SipHash.
"""
keywords = ["random", "rng", "seeder"]
categories = ["algorithms", "no-std"]
edition = "2024"
rust-version = "1.85.0"

[dependencies]
rand_core = { version = "0.10.0", default-features = false }

[lints.clippy]
unit_arg = "allow"
println_empty_string = "allow"
